--- a/demo.html
+++ b/demo.html
@@ -22,6 +22,9 @@
             <button id="copyPassword" type="button">Copy</button>
         </div>
         <form id="passwordForm">
+            <label>Length
+                <input type="range" form="passwordForm" max="256" min="1" step="1" value="8" required/>
+            </label>
             <label>Lower Case
                 <input type="checkbox" form="passwordForm" name="lowerCase" />
             </label>
