--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,7 @@
                 <input type="range" form="passwordForm" max="256" min="1" step="1" value="8" required/>
             </label>
             <label>Lower Case
-                <input type="checkbox" form="passwordForm" name="lowerCase" />
+                <input type="checkbox" form="passwordForm" name="lowerCase" checked/>
             </label>
             <label>Upper Case
                 <input type="checkbox" form="passwordForm" name="upperCase" />
