refactor: changed length type from range to number
Also:
* added a missing name attribute for element.
* Updated punctuation.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -22,8 +22,8 @@
             <button id="copyPassword" type="button">Copy</button>
         </div>
         <form id="passwordForm">
-            <label>Length
-                <input type="range" form="passwordForm" max="256" min="1" step="1" value="8" required/>
+            <label>Length:
+                <input type="number" form="passwordForm" name="length" max="256" min="1" step="1" value="8" required/>
             </label>
             <label>Lower Case
                 <input type="checkbox" form="passwordForm" name="lowerCase" checked/>
