refactor: moved generate password button.
Moved it closer to the generated password and copy button, making it
easier for users to click.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,7 @@
             </p>
             <p id="displayPassword"></p>
             <button id="copyPassword" type="button">Copy</button>
+            <button id="generateButton" type="submit" form="passwordForm">Generate</button>
         </div>
         <form id="passwordForm">
             <label>Length:
@@ -43,7 +44,6 @@
             <label>Memorable
                 <input type="checkbox" form="passwordForm" name="memorable" />
             </label>
-            <button type="submit" form="passwordForm">Generate</button>
         </form>
     </main>
 </body>
