refactor: disabled memorable password option.
This is just to reflect that the project currently ignores this option.
Also:
* Updated punctuation.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -41,8 +41,8 @@
             <label>Special Chars(Emojis, Unicode Symbols)
                 <input type="checkbox" form="passwordForm" name="special" />
             </label>
-            <label>Memorable
-                <input type="checkbox" form="passwordForm" name="memorable" />
+            <label>Memorable:
+                <input type="checkbox" form="passwordForm" name="memorable" disabled/>
             </label>
         </form>
     </main>
