refactor: updated punctuation
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -26,19 +26,19 @@
             <label>Length:
                 <input type="number" form="passwordForm" name="length" max="256" min="1" step="1" value="8" required/>
             </label>
-            <label>Lower Case
-                <input type="checkbox" form="passwordForm" name="lowerCase" checked/>
+            <label>Lower Case:
+                <input type="checkbox" form="passwordForm" name="lowercase" checked/>
             </label>
-            <label>Upper Case
-                <input type="checkbox" form="passwordForm" name="upperCase" />
+            <label>Upper Case:
+                <input type="checkbox" form="passwordForm" name="uppercase" />
             </label>
-            <label>Numbers
+            <label>Numbers:
                 <input type="checkbox" form="passwordForm" name="numbers" />
             </label>
-            <label>Punctuation
+            <label>Punctuation:
                 <input type="checkbox" form="passwordForm" name="punctuation" />
             </label>
-            <label>Special Chars(Emojis, Unicode Symbols)
+            <label>Special Chars(Emojis, Unicode Symbols):
                 <input type="checkbox" form="passwordForm" name="special" />
             </label>
             <label>Memorable:
