feat: added a footer.
Used to display miscellaneous information, such as the version number.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -46,5 +46,8 @@
             </label>
         </form>
     </main>
+    <footer>
+        <p>Version: 1.0.0 - Development</p>
+    </footer>
 </body>
 </html>
