feat: added a header to the password form
Helps to make the form more distinct.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -23,6 +23,7 @@
             <button id="generateButton" type="submit" form="passwordForm">Generate</button>
         </div>
         <form id="passwordForm">
+            <h2>Modifiers</h2>
             <label>Length:
                 <input type="number" form="passwordForm" name="length" max="256" min="1" step="1" value="8" required/>
             </label>
