--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simplePass | Demo</title>
+    <link type="text/css" href="./demo/demo.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
         </div>
     </header>
     <main>
-        <div>
+        <div id="passwordBox">
             <p>
                 <b>Password:</b>
             </p>
