--- a/test/index.test.html
+++ b/test/index.test.html
@@ -17,4 +17,7 @@
     </script>
     <script type="module" src="./index.test.js"></script>
   </body>
+  <footer>
+    <p>Version:1.0.1-Development</p>
+  </footer>
 </html>
