refactor: disabled the ability to generate special characters.
Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -42,7 +42,7 @@
                 <input type="checkbox" form="passwordForm" name="punctuation" />
             </label>
             <label>Special Chars(Emojis, Unicode Symbols):
-                <input type="checkbox" form="passwordForm" name="special" />
+                <input type="checkbox" form="passwordForm" name="special" disabled/>
             </label>
             <label>Memorable:
                 <input type="checkbox" form="passwordForm" name="memorable" disabled/>
@@ -50,7 +50,7 @@
         </form>
     </main>
     <footer>
-        <p>Version:1.0.1-Development</p>
+        <p>Version:2.0.0-Development</p>
     </footer>
 </body>
 </html>
