feat: added whitespace options
A password can now be created with whitespace at the beginning middle
and end.

Comprehensive list of changes:
* README.md:
	* corrected the directory structure in the main example.
	* Indicated what modifiers are disabled
	* fixed some markdown syntax
	* added whitespace option descriptions.
* demo files
	* updated the form to contain the new whitespace options
	* modified the script to allow the options to be disabled or
enabled.
	* updated the styling to (hopefully) display the whitespace properly
* Errors:
	* fixed spelling mistakes.
	* added new errors for whitespace.
* conformPassword:
	* added checks to ensure that a whitespace character exists between
the password.
	* takes a new flag parameter
* generateCharCode can now generate a whitespace character based on the
provided modifier.
* simplePass:
	* now calls the first and last character of the password separately
from the rest.
	* removed optional modifier attributes from default call.
	* no longer appended numbers to similar errors.
* I_passwordModifier:
	* added optional whitespace attributes.
* Test files
	* moved the call to run mocha from the script file to a script tag
in the `demo.html` file
	* added more tests:
		* checking for password length conformity
		* checking for whitespace conformity

--- a/demo.html
+++ b/demo.html
@@ -47,10 +47,25 @@
             <label>Memorable:
                 <input type="checkbox" form="passwordForm" name="memorable" disabled/>
             </label>
+            <label>Allow Whitespace:
+                <input type="checkbox" form="passwordForm" name="allow_whitespace">
+            </label>
+            <fieldset id="whitespaceOptions" name="whitespaceOptions" form="passwordForm">
+                <legend>Whitespace Options</legend>
+                <label>Beginning of Password:
+                    <input type="checkbox" form="passwordForm" name="w_beginning" />
+                </label>
+                <label>End of Password:
+                    <input type="checkbox" form="passwordForm" name="w_end" />
+                </label>
+                <label>Between:
+                    <input type="checkbox" form="passwordForm" name="w_between" />
+                </label>
+            </fieldset>
         </form>
     </main>
     <footer>
-        <p>Version:2.1.0-Development</p>
+        <p>Version:2.2.0-Development</p>
     </footer>
 </body>
 </html>
