--- a/test/index.test.html
+++ b/test/index.test.html
@@ -16,8 +16,11 @@
       mocha.setup('bdd');
     </script>
     <script type="module" src="./index.test.js"></script>
+    <script>
+      mocha.run();
+    </script>
   </body>
   <footer>
-    <p>Version:2.1.0-Development</p>
+    <p>Version:2.2.0-Development</p>
   </footer>
 </html>
