feat: Added a new modifier `excludeCharacters`.
This new feature does what the name implies; it excludes characters from
the desired password.

Quick changes explainer:
* Updated the `README.md` to list the modifier option
* Added to demo page.
* Version bump in `package.json`
* The actual checking for exclusion takes place in `generateCharCode()`
* Created some new error messages for this modifier.
* The attribute had to be added to the `I_passwordModifier`(interface)
and `allowedModifiers`(list)

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/demo.html
+++ b/demo.html
@@ -74,6 +74,9 @@
                     <input type="checkbox" form="passwordForm" name="w_between" />
                 </label>
             </fieldset>
+            <label>Exclude Characters:
+                <input type="text" form="passwordForm" name="excludeCharacters" />
+            </label>
         </form>
     </main>
 </body>
