Docs: Changed the name of the demo page.
Changed the name of the demo page from 'demo' to 'index' this is because
we are going to be using it as the index page for the GitHub Pages.

Changed the pathing to the GitHub Pages in the 'workflows' file to the
root directory rather than the JsDocs generated folder.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                 <p>* <strong>Warning</strong>: Excessive use of this feature may result in degraded performance or non-performance of the program. *</p>
             </label>
         </form>
+        <section>
+            <h2>
+                <a href="./site/simplepass/index.html">Read The Documentation</a>
+            </h2>
+        </section>
     </main>
 </body>
 </html>
