--- a/site/simplepass/helpers_shuffle.helper.js.html
+++ b/site/simplepass/helpers_shuffle.helper.js.html
@@ -29,15 +29,15 @@
     <article>
         <pre class="prettyprint source linenums"><code>'use strict';
 /**
- * @file Fisher-Yates Shuffle helper function.
+ * @file Contains the Fisher Yates shuffle helper function.
  * @module shuffle
  */
 /**
- * A fisher yates shuffle function.
+ * A [Fisher Yates shuffle]{@link https://en.wikipedia.org/wiki/Fisher%E2%80%93Yates_shuffle} function.
  *
  * @function shuffle
- * @param {Array&lt;any>} array - A list that needs to be shuffled
- * @returns {Array&lt;any>} - The shuffled list.
+ * @param {Array&lt;any>} array A list that needs to be shuffled
+ * @returns {Array&lt;any>} The shuffled list.
  */
 export default function shuffle(array) {
     let currentIndex = array.length, randomIndex;
