--- a/site/simplepass/index.html
+++ b/site/simplepass/index.html
@@ -59,6 +59,13 @@
 <ul>
 <li>Length - Adjusts the length of the the password.</li>
 <li>Exclude Characters - Any characters the password should not contain.</li>
+<li><strong>Repeating Character Modifiers</strong>
+<ul>
+<li>Repeating Character - Ensure the password contains at least one repeating character.</li>
+<li>Repeating Character Limit - Ensure the password contains at least the set amount of repeating characters.</li>
+<li>Custom Repeating Characters - Ensure the password contains at least the specified repeating characters. Can be formatted to specify how many times each character can be repeated.</li>
+</ul>
+</li>
 </ul>
 <p><strong>Basic Latin Modifiers</strong></p>
 <ul>
