--- a/site/simplepass/module-E_errors.html
+++ b/site/simplepass/module-E_errors.html
@@ -111,7 +111,7 @@
 <div class="description">
     <p>Enumerated list of possible error codes and there message template strings.
 Anything wrapped in braces, [example], is meant to be a substitution for
-the string.</p>
+the template string.</p>
 </div>
 
 
