--- a/site/simplepass/helpers_createModifierList.helper.js.html
+++ b/site/simplepass/helpers_createModifierList.helper.js.html
@@ -29,17 +29,17 @@
     <article>
         <pre class="prettyprint source linenums"><code>'use strict';
 /**
- * @file Contains for the create modifier list function. Exports `createModifierList`
+ * @file Contains code for a helper function that creates a list of attributes from a [password modifier object]{@link I_passwordModifier}
  * @module createModifierList
  */
 /**
- * Creates an array of strings from a password modifier object containing the object
+ * Creates an array of strings from a [password modifier object]{@link I_passwordModifier} containing the object
  * keys that were found in a predefined list.
  *
  * @function createModifierList
- * @param {I_passwordModifier} modifier - The password modifier object.
- * @param {Array&lt;any>} list - The predefined list to match object keys about.
- * @returns {Array&lt;any>}
+ * @param {I_passwordModifier} modifier The password modifier object.
+ * @param {Array&lt;any>} list The predefined list to match object keys about.
+ * @returns {Array&lt;any>} The list of modifiers attributes that matched the original list.
  */
 export default function createModifierList(modifier, list) {
     // Initialize Array
