refactor: Changed pre-config radio buttons to checkboxes.
This allows us to manipulate the checked state of the input now so the
user can uncheck a pre-config if the want. Radio inputs required a page
refresh and couldn't be unchecked with JS.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/index.html
+++ b/site/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div>
                     <label>Default:
-                        <input type="radio" name="preConfig" value="default" class="sp_preConfig"/>
+                        <input type="checkbox" data-radioCheckbox name="preConfig" value="default" class="sp_preConfig" autocomplete="off"/>
                     </label>
                     <div>
                         <p>Configuration:</p>
@@ -96,7 +96,7 @@
                 </div>
                 <div>
                     <label>4 Digit Pin:
-                        <input type="radio" name="preConfig" value="fourDigitPin" class="sp_preConfig"/>
+                        <input type="checkbox" data-radioCheckbox name="preConfig" value="fourDigitPin" class="sp_preConfig" autocomplete="off"/>
                     </label>
                     <div>
                         <p>Configuration:</p>
@@ -108,7 +108,7 @@
                 </div>
                 <div>
                     <label>Default (Latin Supplement):
-                        <input type="radio" name="preConfig" value="defaultSupplement1" class="sp_preConfig"/>
+                        <input type="checkbox" data-radioCheckbox name="preConfig" value="defaultSupplement1" class="sp_preConfig" autocomplete="off"/>
                     </label>
                     <div>
                         <p>Configuration:</p>
@@ -123,7 +123,7 @@
                 </div>
                 <div>
                     <label>Extreme:
-                        <input type="radio" name="preConfig" value="extreme" class="sp_preConfig"/>
+                        <input type="checkbox" data-radioCheckbox name="preConfig" value="extreme" class="sp_preConfig" autocomplete="off"/>
                     </label>
                     <div>
                         <p>Configuration:</p>
